--- a/src/Courses/Courses.css
+++ b/src/Courses/Courses.css
@@ -6,7 +6,7 @@
     margin-top: 10px;
 }
 @media only screen and (max-width: 768px) {
-    .course{
+    .allCourse{
         grid-template-columns: repeat(1,1fr);
         }
     }
